# toys

./: README.md
asearch/: CMakeLists.txt  amatch.cpp  amatch.jl  asearch.cpp  filters.cpp  filters.h  match.py  sigproc.cpp  sigproc.h  sndfile.jl  utils.cpp  utils.h
asearch/lib/: libfftw3-3.exp  libfftw3-3.lib  libsndfile-1.exp
asearch/notes/: asearch_notes.txt  libsndfile-api.html  libsndfile_GSL_wrap.htm
circbuffer/: CMakeLists.txt  circbuffer.cpp  rmall.sh
lotto-bench/: Makefile  lotto_bench.cpp  notes.txt
mytestapp/: AndroidManifest.xml  android_env.sh  build.sh  build_mac.sh  clear.sh  clear_mac.sh
mytestapp/src/com/example/testapp/: MainActivity.java
sudoku/: sudoku.lisp  sudoku.py
